# enok

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  LICENSE  README.md  config.json  dependencies.py  log.txt  main.py  poetry.toml  pyproject.toml
.github/workflows/: docker.yml
StatusManager/: __init__.py
api/: pyproject.toml
cameras/: __init__.py
config/: __init__.py
db/: __init__.py  jobs.py  models.py  printers.py  users.py
enok-frontend/: next.config.js  package-lock.json  package.json
enok-frontend/components/: Navbar.tsx
enok-frontend/lib/: fetch.ts
enok-frontend/pages/: _app.js  _document.jsx  dashboard.js  dashboard.tsx  index.js  login.js
misc/: Logo.ai
printers/: base.py  dremel.py  printer.py
routes/: auth.py  dev.py  jobs.py  printers.py  users.py
status/: __init__.py
store/: __init__.py
