[tool.poetry]
name = "api"
version = "0.1.0"
description = "Enoch API"
authors = ["Enoch contributors"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
fastapi = "^0.73.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"