[tool.poetry]
name = "api"
version = "0.1.0"
description = "Enok API"
authors = ["Enok contributors"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,^3.10"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
fastapi = "^0.75.1"
requests = "^2.27.1"
google-auth = "^2.6.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"